fixing port for cdi-tomee
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb3@1158610 13f79535-47bb-0310-9956-ffa450edef68